--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
@@ -19,29 +18,19 @@
     </template>
   </test-fixture>
   <script>
-  /* global sinon */
+  /* global AmfLoader */
   suite('api-headers-editor', () => {
     let model;
-    suiteSetup((done) => {
-      const r = new XMLHttpRequest();
-      r.addEventListener('load', () => {
-        let data = r.response;
-        try {
-          data = JSON.parse(data);
-        } catch (e) {
-          done(e);
-          return;
-        }
+    suiteSetup(() => {
+      return AmfLoader.load()
+      .then((data) => {
         data = data[0]['http://raml.org/vocabularies/document#encodes'][0];
         data = data['http://raml.org/vocabularies/http#endpoint'][0];
         data = data['http://www.w3.org/ns/hydra/core#supportedOperation'][0];
         data = data['http://www.w3.org/ns/hydra/core#expects'][0];
         data = data['http://raml.org/vocabularies/http#header'];
         model = data;
-        done();
       });
-      r.open('GET', '../demo/headers-model.json');
-      r.send();
     });
 
     let element;
