--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -20,16 +20,18 @@
   <script>
   /* global AmfLoader */
   suite('api-headers-editor', () => {
-    let model;
+    let amfModel;
+    let amfShape;
     suiteSetup(() => {
       return AmfLoader.load()
       .then((data) => {
+        amfModel = data;
         data = data[0][ApiElements.Amf.ns.raml.vocabularies.document + 'encodes'][0];
         data = data[ApiElements.Amf.ns.raml.vocabularies.http + 'endpoint'][0];
         data = data[ApiElements.Amf.ns.w3.hydra.core + 'supportedOperation'][0];
         data = data[ApiElements.Amf.ns.w3.hydra.core + 'expects'][0];
         data = data[ApiElements.Amf.ns.raml.vocabularies.http + 'header'];
-        model = data;
+        amfShape = data;
       });
     });
 
@@ -43,8 +45,9 @@
         assert.isUndefined(element.value);
       });
 
-      test('viewModel undefined', () => {
-        assert.isUndefined(element.viewModel);
+      test('viewModel is empty', () => {
+        assert.typeOf(element.viewModel, 'array');
+        assert.lengthOf(element.viewModel, 0);
       });
 
       test('sourceMode is false', () => {
@@ -57,25 +60,25 @@
 
       test('Detects content type', function() {
         element.value = 'text:test\ncontent-type:application/test';
-        assert.equal(element.contentType, 'application/test', 'contentType equals application/test');
+        assert.equal(element.contentType, 'application/test',
+          'contentType equals application/test');
       });
 
-
       test('Handles request-headers-changed event', function() {
-        var init = {
+        const init = {
           detail: {
             value: 'Authorization: test'
           },
           bubbles: true,
           cancelable: true
         };
-        var event = new CustomEvent('request-headers-changed', init);
+        const event = new CustomEvent('request-headers-changed', init);
         document.dispatchEvent(event);
         assert.equal(element.value, 'Authorization: test');
       });
 
       test('Don\'t handles canceled request-headers-changed event', function() {
-        var init = {
+        const init = {
           detail: {
             value: 'Authorization: test'
           },
@@ -85,13 +88,13 @@
         document.addEventListener('request-headers-changed', function(e) {
           e.preventDefault();
         });
-        var event = new CustomEvent('request-headers-changed', init);
+        const event = new CustomEvent('request-headers-changed', init);
         document.dispatchEvent(event);
         assert.equal(element.value, undefined);
       });
 
       test('Handles request-header-changed event', function() {
-        var init = {
+        const init = {
           detail: {
             name: 'Authorization',
             value: 'test'
@@ -99,13 +102,13 @@
           bubbles: true,
           cancelable: true
         };
-        var event = new CustomEvent('request-header-changed', init);
+        const event = new CustomEvent('request-header-changed', init);
         document.dispatchEvent(event);
         assert.equal(element.value, 'Authorization: test');
       });
 
       test('Don\'t handles canceled request-header-changed event', function() {
-        var init = {
+        const init = {
           detail: {
             name: 'Authorization',
             value: 'test'
@@ -116,7 +119,7 @@
         document.addEventListener('request-header-changed', function(e) {
           e.preventDefault();
         });
-        var event = new CustomEvent('request-header-changed', init);
+        const event = new CustomEvent('request-header-changed', init);
         document.dispatchEvent(event);
         assert.equal(element.value, undefined);
       });
@@ -234,6 +237,51 @@
     //   assert.equal(elementHeader.innerHTML, 'Hello api-headers-editor!');
     // });
 
+    suite('AMF data model', () => {
+      let element;
+      setup((done) => {
+        element = fixture('BasicTestFixture');
+        element.addEventListener('value-changed', function f(e) {
+          if (!e.detail.value) {
+            return;
+          }
+          element.removeEventListener('value-changed', f);
+          flush(() => done());
+        });
+        element.amfModel = amfModel;
+        element.amfHeaders = amfShape;
+      });
+
+      test('Generates view model from AMF shape', () => {
+        assert.typeOf(element.viewModel, 'array');
+        assert.lengthOf(element.viewModel, 19);
+      });
+
+      test('Model respects default values', () => {
+        const xRequired = element.viewModel[4];
+        assert.equal(xRequired.value, 'required header');
+      });
+
+      test('Generates value from the model', (done) => {
+        setTimeout(() => {
+          const value = element.value;
+          assert.notEqual(value.indexOf('ETag'), -1);
+          assert.notEqual(value.indexOf('Cache-Control'), -1);
+          assert.notEqual(value.indexOf('x-string'), -1);
+          assert.notEqual(value.indexOf('x-optional'), -1);
+          done();
+        }, 250);
+      });
+
+      test('Clears AMF model when value is cleared', (done) => {
+        element.value = undefined;
+        flush(() => {
+          assert.typeOf(element.viewModel, 'array');
+          assert.lengthOf(element.viewModel, 0);
+          done();
+        });
+      });
+    });
   });
 
   suite('content-type-changed support', () => {
