--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
   </head>
@@ -11,7 +10,8 @@
     <script>
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
-        'api-headers-editor_test.html'
+        'api-headers-editor_test.html',
+        'amf-model-test.html'
       ]);
     </script>
 
