Docs: Updating docs

--- a/api-headers-editor.html
+++ b/api-headers-editor.html
@@ -121,8 +121,7 @@
      * @appliesMixin Polymer.IronValidatableBehavior
      * @appliesMixin ApiElements.AmfHelperMixin
      */
-    class ApiHeadersEditor extends
-      Polymer.mixinBehaviors(
+    class ApiHeadersEditor extends Polymer.mixinBehaviors(
         [Polymer.IronValidatableBehavior],
         ArcBehaviors.ApiFormMixin(
           ArcBehaviors.EventsTargetBehavior(
