--- a/test/amf-model-test.html
+++ b/test/amf-model-test.html
@@ -64,7 +64,7 @@
 
         test('Model respects default values', () => {
           const xRequired = element.viewModel[4];
-          assert.equal(xRequired.value, 'required header');
+          assert.equal(xRequired.value, 'default required value');
         });
 
         test('Validates the editor', () => {
