--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -17,6 +17,19 @@
       <api-headers-editor></api-headers-editor>
     </template>
   </test-fixture>
+
+  <test-fixture id="ReadOnly">
+    <template>
+      <api-headers-editor readonly></api-headers-editor>
+    </template>
+  </test-fixture>
+
+  <test-fixture id="SourceMode">
+    <template>
+      <api-headers-editor source-mode></api-headers-editor>
+    </template>
+  </test-fixture>
+
   <script>
   suite('api-headers-editor', () => {
     let element;
@@ -277,6 +290,299 @@
       const ct = 'test';
       fire(ct);
       assert.equal(element.value, 'Content-Type: test');
+    });
+  });
+
+  suite('_attachSourceEditor()', () => {
+    test('Adds panel to the DOM', (done) => {
+      const element = fixture('BasicTestFixture');
+      flush(() => {
+        element._attachSourceEditor();
+        const panel = element.shadowRoot.querySelector('code-mirror');
+        assert.ok(panel);
+        done();
+      });
+    });
+
+    test('Sets panel mode', (done) => {
+      const element = fixture('BasicTestFixture');
+      flush(() => {
+        element._attachSourceEditor();
+        const panel = element.shadowRoot.querySelector('code-mirror');
+        assert.equal(panel.mode, 'http-headers');
+        done();
+      });
+    });
+
+    test('Sets data-headers-panel attribute', (done) => {
+      const element = fixture('BasicTestFixture');
+      flush(() => {
+        element._attachSourceEditor();
+        const panel = element.shadowRoot.querySelector('code-mirror');
+        assert.isTrue(panel.hasAttribute('data-headers-panel'));
+        done();
+      });
+    });
+
+    test('Sets editor read only', (done) => {
+      const element = fixture('ReadOnly');
+      flush(() => {
+        element._attachSourceEditor();
+        const panel = element.shadowRoot.querySelector('code-mirror');
+        assert.isTrue(panel.readOnly);
+        done();
+      });
+    });
+  });
+
+  suite('_readonlyChanged()', () => {
+    let element;
+    setup((done) => {
+      element = fixture('BasicTestFixture');
+      flush(() => done());
+    });
+
+    test('Does nothing in form mode', () => {
+      element.sourceMode = false;
+      element._readonlyChanged(true);
+      const panel = element.currentPanel;
+      assert.isUndefined(panel.readOnly);
+    });
+
+    test('Sets panel readOnly model when source mode', () => {
+      element.sourceMode = true;
+      element._readonlyChanged(true);
+      const panel = element.currentPanel;
+      assert.isTrue(panel.readOnly);
+    });
+  });
+
+  suite('modelToValue()', () => {
+    let element;
+    setup(() => {
+      element = fixture('BasicTestFixture');
+    });
+
+    test('Returns empty string when no model', () => {
+      const result = element.modelToValue();
+      assert.equal(result, '');
+    });
+
+    test('Uses "viewModel" when no argument', () => {
+      element.viewModel = [{name: 'x-test', value: 'x-value', schema: {}}];
+      const result = element.modelToValue();
+      assert.equal(result, 'x-test: x-value');
+    });
+
+    test('Skips disabled items', () => {
+      element.viewModel = [{name: 'x-test', value: 'x-value', schema: {enabled: false}}];
+      element.allowDisableParams = true;
+      const result = element.modelToValue();
+      assert.equal(result, '');
+    });
+
+    test('Will not skip disabled item when disabling is not allowed', () => {
+      element.viewModel = [{name: 'x-test', value: 'x-value', schema: {enabled: false}}];
+      element.allowDisableParams = false;
+      const result = element.modelToValue();
+      assert.equal(result, 'x-test: x-value');
+    });
+
+    test('Allows enabled items', (done) => {
+      element.viewModel = [{name: 'x-test', value: 'x-value', schema: {enabled: true}}];
+      element.allowDisableParams = true;
+      const result = element.modelToValue();
+      assert.equal(result, 'x-test: x-value');
+      flush(() => done());
+    });
+  });
+
+  suite('_cmKeysHandler()', () => {
+    let element;
+    setup((done) => {
+      element = fixture('SourceMode');
+      flush(() => done());
+    });
+
+    test('Opens hints', () => {
+      const panel = element.currentPanel;
+      const editor = panel.editor;
+      assert.ok(editor, 'Editor property is set');
+      element._cmKeysHandler(editor);
+      const container = panel.querySelector('code-mirror-hint-container');
+      assert.ok(container, 'Hints container is in the DOM');
+    });
+  });
+
+  suite('createCustom()', () => {
+    let element;
+    setup(() => {
+      element = fixture('BasicTestFixture');
+    });
+
+    test('Returns an object', () => {
+      const result = element.createCustom();
+      assert.typeOf(result, 'object');
+    });
+
+    test('Creates schema property', () => {
+      const result = element.createCustom({});
+      assert.typeOf(result.schema, 'object');
+    });
+
+    test('Adds isCustom property', () => {
+      const result = element.createCustom({});
+      assert.isTrue(result.schema.isCustom);
+    });
+
+    test('Sets default type property', () => {
+      const result = element.createCustom({});
+      assert.equal(result.schema.type, 'string');
+    });
+
+    test('Respects existing type property', () => {
+      const result = element.createCustom({
+        schema: {
+          type: 'integer'
+        }
+      });
+      assert.equal(result.schema.type, 'integer');
+    });
+
+    test('Sets default enabled property', () => {
+      const result = element.createCustom({});
+      assert.isTrue(result.schema.enabled);
+    });
+
+    test('Re-enable item', () => {
+      const result = element.createCustom({
+        schema: {
+          enabled: false
+        }
+      });
+      assert.isTrue(result.schema.enabled);
+    });
+
+    test('Sets default inputLabel property', () => {
+      const result = element.createCustom({});
+      assert.equal(result.schema.inputLabel, 'Header value');
+    });
+
+    test('Respects existing type property', () => {
+      const result = element.createCustom({
+        schema: {
+          inputLabel: 'test-lable'
+        }
+      });
+      assert.equal(result.schema.inputLabel, 'test-lable');
+    });
+  });
+
+  suite('_headerChangedHandler()', () => {
+    let element;
+    setup((done) => {
+      element = fixture('BasicTestFixture');
+      element.value = '';
+      flush(() => done());
+    });
+
+    test('Ignores event when dispatched by self', () => {
+      element._headerChangedHandler({
+        composedPath: () => [element]
+      });
+      assert.equal(element.value, '');
+    });
+
+    test('Ignores cancelled event', () => {
+      element._headerChangedHandler({
+        composedPath: () => [],
+        defaultPrevented: true
+      });
+      assert.equal(element.value, '');
+    });
+
+    test('Ignores event when no name', () => {
+      element._headerChangedHandler({
+        composedPath: () => [],
+        defaultPrevented: false,
+        detail: {
+          name: '',
+          value: ''
+        }
+      });
+      assert.equal(element.value, '');
+    });
+
+    test('Updates value of the editor', () => {
+      element._headerChangedHandler({
+        composedPath: () => [],
+        defaultPrevented: false,
+        detail: {
+          name: 'x-test',
+          value: 'x-value'
+        }
+      });
+      assert.equal(element.value, 'x-test: x-value');
+    });
+
+    test('Updates existing value', () => {
+      element.value = 'x-test: x-value';
+      element._headerChangedHandler({
+        composedPath: () => [],
+        defaultPrevented: false,
+        detail: {
+          name: 'x-test',
+          value: 'x-other'
+        }
+      });
+      assert.equal(element.value, 'x-test: x-other');
+    });
+  });
+
+  suite('_headerDeletedHandler()', () => {
+    let element;
+    const defaultValue = 'x-header: x-value';
+    setup((done) => {
+      element = fixture('BasicTestFixture');
+      element.value = defaultValue;
+      flush(() => done());
+    });
+
+    test('Ignores cancelled event', () => {
+      element._headerDeletedHandler({
+        defaultPrevented: true
+      });
+      assert.equal(element.value, defaultValue);
+    });
+
+    test('Ignores event when no name', () => {
+      element._headerDeletedHandler({
+        defaultPrevented: false,
+        detail: {
+          name: ''
+        }
+      });
+      assert.equal(element.value, defaultValue);
+    });
+
+    test('Removes the header', () => {
+      element._headerDeletedHandler({
+        defaultPrevented: false,
+        detail: {
+          name: 'x-header'
+        }
+      });
+      assert.equal(element.value, '');
+    });
+
+    test('Keeps not removed headers', () => {
+      element._headerDeletedHandler({
+        defaultPrevented: false,
+        detail: {
+          name: 'z-header'
+        }
+      });
+      assert.equal(element.value, defaultValue);
     });
   });
   </script>
